--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      overflow: hidden;
+      /* Remove or comment out overflow: hidden to enable scroll */
+      /* overflow: hidden; */
     }
 
     #confetti {
@@ -156,7 +157,7 @@
 
     .top-hellokitty {
       position: fixed;
-      top: 200px;
+      top: 100px;
       left: 50%;
       transform: translateX(-50%) scale(0.6);
       z-index: 200;
